# TFM

./: Node-red-flow-tfm.json
camera_sample/: sdkconfig  sdkconfig.old
camera_sample/main/: CMakeLists.txt  Kconfig.projbuild  app_camera.c  app_main.c  app_sample.c  app_wifi.c
camera_sample/main/include/: app_sample.h
camera_sample_edge/: CMakeLists.txt  Makefile  partitions2.csv  sdkconfig  sdkconfig.old
camera_sample_edge/components/esp32-camera/: CMakeLists.txt
camera_sample_edge/main/: CMakeLists.txt  Kconfig.projbuild  app_camera.c  app_main.c  app_mdns.c  app_tensorflow.cc  app_wifi.c  component.mk  model_settings.c
camera_sample_edge/main/include/: app_tensorflow.h  app_wifi.h  model_settings.h
camera_sample_edge/main/tf_model/: model_data_28_28_3.cc  model_data_28_28_3_v1.cc  model_data_28_28_3_v2.cc  model_data_96_96_3_too_big.cc
